--- a/our-story.html
+++ b/our-story.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Our Story - Haoran & Chi</title>
+    <title>Our Ceremony - Haoran & Chi</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -10,7 +11,7 @@
     <div class="logo">Haoran & Chi</div>
     <ul class="nav-menu">
         <li><a href="index.html">Home</a></li>
-        <li><a href="our-story.html">Our Story</a></li>
+        <li><a href="our-story.html">Our Ceremony</a></li>
         <li><a href="accommodations.html">Accommodations</a></li>
         <li><a href="registry.html">The Registry</a></li>
         <li><a href="rsvp.html">RSVP</a></li>
@@ -18,7 +19,7 @@
 </nav>
 
 <div class="page-content">
-    <h2>Our Story</h2>
+    <h2>Our Ceremony</h2>
     <p>This is where you can write about how you met, the journey together, the proposal, etc.</p>
 </div>
 
@@ -27,3 +28,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+
