Rename accommodations page to The Reception

--- a/accommodations.html
+++ b/accommodations.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Accommodations - Haoran & Chi</title>
+    <title>The Reception - Haoran & Chi</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -10,15 +10,15 @@
     <div class="logo">Haoran & Chi</div>
     <ul class="nav-menu">
         <li><a href="index.html">Home</a></li>
-        <li><a href="our-story.html">Our Story</a></li>
-        <li><a href="accommodations.html">Accommodations</a></li>
+        <li><a href="our-story.html">Our Ceremony</a></li>
+        <li><a href="accommodations.html">The Reception</a></li>
         <li><a href="registry.html">The Registry</a></li>
         <li><a href="rsvp.html">RSVP</a></li>
     </ul>
 </nav>
 
 <div class="page-content">
-    <h2>Accommodations</h2>
+    <h2>The Reception</h2>
     <p>Hotel options, booking codes, transportation details, and maps go here.</p>
 </div>
 
@@ -27,3 +27,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+
