--- a/our-story.html
+++ b/our-story.html
@@ -12,7 +12,7 @@
     <ul class="nav-menu">
         <li><a href="index.html">Home</a></li>
         <li><a href="our-story.html">Our Ceremony</a></li>
-        <li><a href="accommodations.html">Accommodations</a></li>
+        <li><a href="accommodations.html">The Reception</a></li>
         <li><a href="registry.html">The Registry</a></li>
         <li><a href="rsvp.html">RSVP</a></li>
     </ul>
@@ -28,4 +28,5 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
